fixed dumb mistake on get-resume, added padding on scroll, better css support on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  @apply max-sm:scroll-p-12 scroll-p-20
+}
+
 body {
   @apply m-0 flex place-items-center min-w-min min-h-screen
 }
